--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "^9.10.0",
     "eslint-plugin-vue": "^9.28.0",
     "globals": "^15.9.0",
-    "husky": "^9.1.6",
+    "husky": "8.0.3",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.45",
     "postcss-html": "^1.7.0",
