--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:prettier": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
     "lint:stylelint": "stylelint \"./**/*.{css,less,vue,html}\" --fix",
     "lint:commitlint": "commitlint --config commitlint.config.js -e -V",
-    "prepare": "husky install",
+    "prepare": "husky",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
@@ -25,7 +25,7 @@
     "eslint": "^9.10.0",
     "eslint-plugin-vue": "^9.28.0",
     "globals": "^15.9.0",
-    "husky": "8.0.3",
+    "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.45",
     "postcss-html": "^1.7.0",
