--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,17 +3,11 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": "never",
     "source.fixAll.eslint": "always",
-    "source.fixAll.stylelint": "always",
+    "source.fixAll.stylelint": "always"
   },
   // 保存的时候自动格式化
   "editor.formatOnSave": true,
   // 默认格式化工具选择prettier
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "stylelint.validate": [
-    "css",
-    "less",
-    "vue",
-    "html",
-    "scss"
-  ]
+  "stylelint.validate": ["css", "less", "vue", "html", "scss"]
 }
