--- a/package.json
+++ b/package.json
@@ -31,14 +31,19 @@
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.45",
     "postcss-html": "^1.7.0",
-    "postcss-less": "^6.0.0",
+    "postcss-scss": "^4.0.9",
     "prettier": "^3.3.3",
+    "sass": "^1.78.0",
     "stylelint": "^16.9.0",
-    "stylelint-config-recommended-less": "^3.0.1",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^5.1.0",
+    "stylelint-config-recommended": "^14.0.1",
+    "stylelint-config-recommended-scss": "^14.1.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-less": "^3.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
+    "stylelint-scss": "^6.6.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.5.0",
     "vite": "^5.4.1",
