--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
+    "element-plus": "^2.8.3",
     "pinia": "^2.2.2",
     "vue": "^3.4.37",
     "vue-router": "^4.4.4"
@@ -46,6 +48,8 @@
     "stylelint-scss": "^6.6.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.5.0",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
   }
