--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@iconify-icons/ep": "^1.2.12",
     "@iconify-icons/ri": "^1.2.10",
     "@iconify/vue": "^4.1.2",
+    "@typescript-eslint/parser": "^8.7.0",
     "@vitejs/plugin-vue": "^5.1.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.10.0",
